tests/typ/func-font-error.typ
// Test error cases of the `font` function.

[font: something="invalid"]

// compare-ref: false
// error: 3:8-3:27 unexpected argument
